force-app/src/objects/fferpcore__exp_configurationItem__c.object
<CustomObject>
    <description>Stores data used by the Certinia Configuration Builder.</description>
    <fields>
        <fullName>fferpcore__ItemType__c</fullName>
        <description>Configuration item type.</description>
        <label>Item Type</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Label__c</fullName>
        <description>Descriptive label for the configuration item</description>
        <label>Display Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__LargeData__c</fullName>
        <description>Configuration data string (JSON)</description>
        <label>Large Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Configuration Item</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>